demo code/VB/DLBT.bas

                               
Declare Function DLBT_Downloader_Initialize Lib "DLBT.dll" (ByVal torrentFile As String, _
                               ByVal outPath As String, _
                               ByVal statusFile As String, _
                               ByVal fileAllocateType As DLBT_FILE_ALLOCATE_TYPE, _
                               ByVal bPaused As Boolean, _
                               ByVal bQuickSeed As Boolean, _
                               ByVal password As String, _
                               ByVal rootPathName As String, _
                               ByVal bPrivateProtocol As Boolean, _
                               ByVal bZipTransfer As Boolean) As Long
'
'// 启动一个内存中的种子文件内容，可用于种子文件不是独立存储或者按某个加密方式加密种子的情况，可以将解密后的内容传入BT内核
'DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize_FromBuffer (
'        LPBYTE              torrentFile,                    // 内存中的种子文件内容
'        DWORD               dwTorrentFileSize,              // 种子内容的大小
'        LPCWSTR             outPath,                        // 下载后的保存路径（只是目录）
'        LPCWSTR             statusFile = NULL,              // 状态文件的路径
'        DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,         // 文件分配模式
'        BOOL                bPaused = FALSE,
'        BOOL                bQuickSeed = FALSE,             // 是否快速供种（专业服务器模式下有效，仅商业版提供，个人免费版和演示版暂不提供）
'        LPCSTR              password = NULL,                // 是否加密种子，如果为Null，则是普通种子，否则是种子的密码，试用版不支持，该参数会被忽略
'        LPCWSTR             rootPathName = NULL,             // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
'                                                            // 对单个文件则直接进行改名为指定的这个名字
'        BOOL                bPrivateProtocol = FALSE,        // 该种子是否私有协议（可以对不同种子采用不同的下载方式）
'        BOOL                bZipTransfer = FALSE            // 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
'        );
'
'// 从一个Torrent句柄启动一个任务
'DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize_FromTorrentHandle (
'        HANDLE              torrentHandle,                    // Torrent句柄
'        LPCWSTR             outPath,                        // 下载后的保存路径（只是目录）
'        LPCWSTR             statusFile = NULL,              // 状态文件的路径
'        DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,         // 文件分配模式
'        BOOL                bPaused = FALSE,
'        BOOL                bQuickSeed = FALSE,              // 是否快速供种（专业服务器模式下有效，仅商业版提供，个人免费版和演示版暂不提供）
'        LPCWSTR             rootPathName = NULL             // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
'                                                            // 对单个文件则直接进行改名为指定的这个名字
'        BOOL                bPrivateProtocol = FALSE,       // 该种子是否私有协议（可以对不同种子采用不同的下载方式）
'        BOOL                bZipTransfer = FALSE            // 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
'    );
'
'//（无种子模式在试用版中无效，可以调用这些接口，但不会有效果）
'DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize_FromInfoHash (
'        LPCSTR              trackerURL,                     // tracker的地址
'        LPCSTR              infoHash,                       // 文件的infoHash值
'        LPCTSTR             outPath,
'        LPCTSTR             name = NULL,                    // 在下载到种子之前，是没有办法知道名字的，因此可以传入一个临时的名字
'        LPCWSTR             statusFile = NULL,              // 状态文件的路径
'        DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,         // 文件分配模式
'        BOOL bPaused = False,
'        LPCWSTR             rootPathName = NULL             // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
'                                                            // 对单个文件则直接进行改名为指定的这个名字
'        BOOL                bPrivateProtocol = FALSE,       // 该种子是否私有协议（可以对不同种子采用不同的下载方式）
'        BOOL                bZipTransfer = FALSE            // 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
'        );
'
'// 无种子模式的另一个接口，可以直接通过地址下载，地址格式为： DLBT://xt=urn:btih: Base32 编码过的info-hash [ &dn= 名字 ] [ &tr= tracker的地址 ]  ([]为可选参数)
'// 完全遵循uTorrent的官方BT扩展协议
'DLBT_API HANDLE WINAPI DLBT_Downloader_Initialize_FromUrl (
'    LPCSTR              url,                            // 网址
'    LPCTSTR             outPath,                        // 保存目录
'    LPCWSTR             statusFile = NULL,              // 状态文件的路径
'    DLBT_FILE_ALLOCATE_TYPE  fileAllocateType = FILE_ALLOCATE_SPARSE,
'    BOOL bPaused = False,
'        LPCWSTR             rootPathName = NULL             // 种子内部目录的名字，如果为NULL，则用种子中的名字，否则改为指定的这个名字。
'                                                            // 对单个文件则直接进行改名为指定的这个名字
'        BOOL                bPrivateProtocol = FALSE,       // 该种子是否私有协议（可以对不同种子采用不同的下载方式）
'        BOOL                bZipTransfer = FALSE            // 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
'    );

'// 专业文件更新接口，任务以新老种子文件为基础，更新新种子文件相对老种子文件变化过的数据块。仅商业版中提供
'DLBT_API HANDLE WINAPI DLBT_Downloader_InitializeAsUpdater (
'    LPCWSTR             curTorrentFile,    //当前版本的种子文件
'    LPCWSTR             newTorrentFile,   //  新版种子文件
'    LPCWSTR             curPath,    //  当前文件的路径
'    LPCWSTR             statusFile = L"", // 状态文件的路径
'    DLBT_FILE_ALLOCATE_TYPE    type = FILE_ALLOCATE_SPARSE, //  文件分配方式，必须和当前版本一致，新版本也将使用该分配方式。
'    BOOL                bPaused = FALSE,     // 是否暂停方式启动
'    LPCSTR              curTorrentPassword = NULL,
'    LPCSTR              newTorrentFilePassword = NULL,
'    LPCWSTR             rootPathName = NULL,
'    BOOL                bPrivateProtocol = FALSE,
'    float       *       fProgress = NULL,        //如果不为NULL，则传出和DLBT_Downloader_GetOldTorrentProgress一样的一个进度
'    BOOL                bZipTransfer = FALSE            // 是否压缩传输，一般用于文本文件的下载，如果对方是支持这个功能的dlbt用户，则可以互相压缩传输，减少流量
'   );

'// 专业文件更新时，传入新老种子，然后直接传出老种子和新种子的差异情况（进度），如果进度是99%，则意味着只有1%的数据需要下载。
'DLBT_API float WINAPI DLBT_Downloader_GetOldTorrentProgress (
'    LPCWSTR             curTorrentFile,    //当前版本的种子文件
'    LPCWSTR             newTorrentFile,   //  新版种子文件
'    LPCWSTR             curPath,    //  当前文件的路径
'    LPCWSTR             statusFile = L"", // 状态文件的路径
'    LPCSTR              curTorrentPassword = NULL,
'    LPCSTR newTorrentFilePassword = Null
'    );

' // 获取本任务所有的Http连接，内存必须调用DLBT_Downloader_FreeConnections释放
' DLBT_API void WINAPI DLBT_Downloader_GetHttpConnections(HANDLE hDownloader, LPSTR ** urls, int * urlCount);
' // 释放DLBT_Downloader_GetHttpConnections传出的内存
' DLBT_API void WINAPI DLBT_Downloader_FreeConnections(LPSTR * urls, int urlCount);

'// 增加一个http的地址，当该下载文件在某个Web服务器上有http下载时可以使用，web服务器的编码方式最好为UTF-8，如果是其它格式可以联系点量软件进行修改
Declare Sub DLBT_Downloader_AddHttpDownload Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal url As String)

'// 移除一个P2SP的地址，如果正在下载中，会进行断开并且从候选者列表中移除，不再进行重试
Declare Sub DLBT_Downloader_RemoveHttpDownload Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal url As String)
'// 设置一个Http地址，最多可以建立多少个连接，默认是1个连接. 如果服务器性能好，可以酌情设置，比如设置10个，则是对一个Http地址，可以建立10个连接。
'// 设置之前如果已经一个Http地址建立好了多个连接，则不再断开，仅对设置后再新建连接时生效
Declare Sub DLBT_Downloader_SetMaxSessionPerHttp Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal limit As Long)

'加入Tracker
Declare Function DLBT_Downloader_AddTracker Lib "DLBT.dll" (ByVal hTorrent As Long, ByVal TrackerURL As String, ByVal tier As Long) As Long
Declare Sub DLBT_Downloader_RemoveAllTracker Lib "DLBT.dll" (ByVal hDownloader As Long)
Declare Sub DLBT_Downloader_AddHttpTrackerExtraParams Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal extraParams As String)
                            
' 关闭任务之前，可以调用该函数停掉IO线程对该任务的操作（异步的，需要调用DLBT_Downloader_IsReleasingFiles函数来获取是否还在释放中）。
' 该函数调用后，请直接调用_Release，不可对该句柄再调用其它DLBT_Dwonloader函数。本函数内部会先暂停所有数据下载，然后释放掉文件句柄
Declare Sub DLBT_Downloader_ReleaseAllFiles Lib "DLBT.dll" (ByVal hDownloader As Long)
' 是否还在释放句柄的过程中
Declare Function DLBT_Downloader_IsReleasingFiles Lib "DLBT.dll" (ByVal hDownloader As Long) As Boolean


Public Enum DLBT_RELEASE_FLAG
    DLBT_RELEASE_NO_WAIT = 0            ' 默认方式Release，直接释放，不等待释放完成
    DLBT_RELEASE_WAIT = 1               ' 等待所有文件都释放完成
    DLBT_RELEASE_DELETE_STATUS = 2      ' 删除状态文件
    DLBT_RELEASE_DELETE_ALL = 4         ' 删除所有文件
End Enum

' 关闭hDownloader所标记的下载任务,如果需要删除文件,可以将第2个参数置为True
Declare Function DLBT_Downloader_Release Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal nFlag As DLBT_RELEASE_FLAG) As Long


' 设置单个任务的最大缓存，仅在商业授权版中有该功能
Declare Sub DLBT_Downloader_SetDiskCacheSize Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal size As Long)

' 设置任务下载是否按顺序下载,默认是非顺序下载(随机的下载,一般遵循稀有者优先,这种方式速度快),但顺序下载适用于边下边播放
Declare Sub DLBT_Downloader_SetDownloadSequence Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal ifSeq As Boolean)

' 下载的状态 以及 暂停和继续的接口
Declare Function DLBT_Downloader_GetState Lib "DLBT.dll" (ByVal hDownloader As Long) As DLBT_DOWNLOAD_STATE '获取下载任务的状态
Declare Function DLBT_Downloader_IsPaused Lib "DLBT.dll" (ByVal hDownloader As Long) As Boolean   '判断是否暂停状态
Declare Sub DLBT_Downloader_Pause Lib "DLBT.dll" (ByVal hDownloader As Long)       '暂停
Declare Sub DLBT_Downloader_Resume Lib "DLBT.dll" (ByVal hDownloader As Long)       '继续

' 出错状态下的两个接口 （一般只有在极其特殊情况下文件无法写入时才会出错，比如磁盘满了）
Declare Function DLBT_Downloader_GetLastError Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal pBuffer As String, ByRef pBufferSize As Long) As Long ' 如果任务的状态为BTDS_ERROR，通过该接口获取详细错误信息
Declare Sub DLBT_Downloader_ResumeInError Lib "DLBT.dll" (ByVal hDownloader As Long)   ' 清除这个错误，尝试重新开始任务

' 无种子下载的相关接口（无种子模式在试用版中无效，可以调用这些接口，但不会有效果）
Declare Function DLBT_Downloader_IsHaveTorrentInfo Lib "DLBT.dll" (ByVal hDownloader As Long) As Boolean ' 无种子下载时，用于判断是否成功获取到了种子信息
Declare Function DLBT_Downloader_MakeURL Lib "DLBT.dll" (ByVal hDownloader As Long, _
                                                         ByVal pBuffer As String, _
                                                         ByRef pBufferSize As Long) As Long


' 下载的限速和限制连接的接口
Declare Sub DLBT_Downloader_SetDownloadLimit Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal limit As Long)
Declare Sub DLBT_Downloader_SetUploadLimit Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal limit As Long)
Declare Sub DLBT_Downloader_SetMaxUploadConnections Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal limit As Long)
Declare Sub DLBT_Downloader_SetMaxTotalConnections Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal limit As Long)

' 确保任务只上传，不下载
Declare Sub DLBT_Downloader_SetOnlyUpload Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal bUpload As Boolean)

' 设置对服务器IP进行下载限速，单位是BYTE(字节），如果需要限速1M，请输入1024*1024
Declare Sub DLBT_Downloader_SetServerDownloadLimit Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal limit As Long)
' 设置本任务不再去跟所有的服务器IP建立连接（对于对方连过来的连接，需要BT协议握手通过后，知道是对应于这个下载任务hDownloader的后才再断开）。
Declare Sub DLBT_Downloader_BanServerDownload Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal limit As Boolean)

' 下载分享率 (上传/下载的比例）的接口
Declare Sub DLBT_Downloader_SetShareRateLimit Lib "DLBT.dll" (ByVal hDownloader As Long, ByVal fRate As Single)
Declare Function DLBT_Downloader_GetShareRate Lib "DLBT.dll" (ByVal hDownloader As Long) As Double


' 正在下载的文件的属性（文件大小、完成数、进度等）
Declare Function DLBT_Downloader_GetTorrentName Lib "DLBT.dll" (ByVal hDownloader As Long, _
                                                                ByVal pBuffer As String, _
                                                                ByRef pBufferSize As Long) As Long
                                                                
Declare Function DLBT_Downloader_GetTotalFileSize Lib "DLBT.dll" (ByVal hDownloader As Long) As UINT64
Declare Function DLBT_Downloader_GetTotalWanted Lib "DLBT.dll" (ByVal hDownloader As Long) As UINT64      ' 共有选择了多少下载量，不包含不想下载的文件
Declare Function DLBT_Downloader_GetTotalWantedDone Lib "DLBT.dll" (ByVal hDownloader As Long) As UINT64   ' 在选定的文件中，下载了多少
Declare Function DLBT_Downloader_GetProgress Lib "DLBT.dll" (ByVal hDownloader As Long) As Single
